# indenter

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: test.yaml  tests.yml
indenter/: __init__.py  test_indent.py
