[project]
name = "indenter"
version = "1.0.1"
description = "Indent text using `with` blocks."
authors = [
    "Ben Carlsson <ben@twos.dev>"
]
license = "MIT"
readme = "README.md"
python = ">=3.6"
homepage = "https://github.com/glacials/indenter"
repository = "https://github.com/glacials/indenter"
documentation = "https://github.com/glacials/indenter"

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
