[metadata]
name = indenter
version = 1.0.1
description = Programmatically indent output the right amount using `with`/`+`/`-`.
long_description = file: README.md
long_description_content_type: text/markdown
author = Ben Carlsson
author_email = ben@twos.dev
url = https://github.com/glacials/indenter
python_requires = >= 3.6
license = MIT
license_file = LICENSE
platform = any
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = indenter
